--- a/form_builder.html
+++ b/form_builder.html
@@ -77,6 +77,14 @@
 <!-- using handlebars for templating, but DustJS might be better for the current purpose -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.3/handlebars.min.js"></script>
 
+<script src="js/formBuilder.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+      window.formBuilder = new FormBuilder();
+   });
+</script>  
+
 <script>
 
 	function docReady() {
@@ -88,29 +96,25 @@
 				
 		window.templates.textbox = Handlebars.compile($("#textbox-template").html());
 		window.templates.passwordbox = Handlebars.compile($("#textbox-template").html());
-		window.templates.combobox = Handlebars.compile($("#combobox-template").html());
+		window.templates.combobox = Handlebars.compile($("#combobox-template").html());	
+		        $( ".droppedFields" ).droppable({
+        activeClass: "activeDroppable",
+        hoverClass: "hoverDroppable",
+        accept: ":not(.ui-sortable-helper)",
+        drop: function( event, ui ) {
+        //console.log(event, ui);
+        var draggable = ui.draggable;
+        draggable = $(ui.draggable).find(".modele").clone();
+          // draggable = draggable.clone();
+        draggable.removeClass("modele");
+        draggable.removeClass("selectorField");
+        draggable.addClass("droppedField");
+        draggable[0].id = "CTRL-DIV-"+(0); // Attach an ID to the rendered control
+        console.log(draggable);
+        draggable.appendTo(this);
+        } 
+});
 
-		$(".selectorField").draggable({ helper: "clone",stack: "div",cursor: "move", cancel: null  });
-		
-		$( ".droppedFields" ).droppable({
-			  activeClass: "activeDroppable",
-			  hoverClass: "hoverDroppable",
-			  accept: ":not(.ui-sortable-helper)",
-			  drop: function( event, ui ) {
-				//console.log(event, ui);
-				var draggable = ui.draggable;				
-				draggable = draggable.clone();
-				draggable.removeClass("selectorField");
-				draggable.addClass("droppedField");
-				draggable.appendTo(this);				
-			}
-		});		
-
-		/* Make the droppedFields sortable and connected with other droppedFields containers*/
-		$( ".droppedFields" ).sortable({
-										cancel: null, // Cancel the default events on the controls
-										connectWith: ".droppedFields"
-									}).disableSelection();
 	}	
 </script>
 </head>
@@ -179,14 +183,33 @@
 			{{{content}}}
 		</form>
 	</div>
+	<div class="modal-footer">
+		<button class="btn btn-primary" data-dismiss="modal" onclick='save_customize_changes()'>Save changes</button>
+		<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+		<button class="btn btn-danger" data-dismiss="modal" aria-hidden="true" onclick='delete_ctrl()'>Delete</button>
+	</div>
 </script>
 
 <script id="textbox-template" type="text/x-handlebars-template">
-	<p><label class="control-label">Placeholder</label> <input type="text" name="placeholder" value=""></input></p>
+  <p><label class="control-label">Placeholder</label> <input type="text" name="placeholder" value=""/></p>  
 </script>
 
 <script id="combobox-template" type="text/x-handlebars-template">
-	<p><label class="control-label">Options</label> <textarea name="options" rows="5"></textarea></p>
+  <p><label class="control-label">Options</label> <textarea name="options" rows="5"></textarea></p>
+</script>
+
+<script id="text-template" type="text/x-handlebars-template">
+  <p><label class="control-label" for="handlebars-textbox-text">Texte</label> <textarea name="texte" rows="10" id="handlebars-textbox-text"></textarea></p>  
+</script>
+
+<script id="date-template" type="text/x-handlebars-template">
+  <p>
+    <label class="control-label" for="handlebars-textbox-formatdate" style="padding-top:16px;">Format</label>
+    <select name="dateformat" id="handlebars-textbox-formatdate">
+      <option value="DD/MM/YYYY">DD/MM/YYYY</option>
+      <option value="DD/MM/YYYY hh:mm:ss">DD/MM/YYYY hh:mm:ss</option>
+    </select>    
+  </p>
 </script>
 
 <!-- End of templates -->
