[MOD] variable names

--- a/form_builder.html
+++ b/form_builder.html
@@ -160,7 +160,7 @@
 	<div class="modal-body">
 		<form id="theForm" class="form-horizontal">
 			<input type="hidden" value="{{type}}" name="type"></input>
-			<input type="hidden" value="{{forCtrl}}" name="forCtrl"></input>
+			<input type="hidden" value="{{id}}" name="id"></input>
 			<p><label class="control-label">Label</label> <input type="text" name="label" value=""></input></p>
 			<p><label class="control-label">Name</label> <input type="text" value="" name="name"></input></p>
 			{{{content}}}
