--- a/form_builder.html
+++ b/form_builder.html
@@ -19,7 +19,10 @@
 		.hoverDroppable {
 			background-color: lightgreen;
 		}
-
+		.placeholder {
+		    background-color: green;
+		    height: 50px;
+		}		
 		.draggableField {
 			/* float: left; */
 			padding-left:5px;
@@ -136,11 +139,6 @@
 			<label>Type form title here...</label>
 		</div>
 		<![endif]-->
-	  
-	  <div class="row-fluid">
-		<div id="selected-column-1" class="span5 well droppedFields"></div>
-		<div id="selected-column-2" class="span5 well droppedFields"></div>
-	  </div>
 	  <div class="row-fluid">
 		<div id="" class="span10 well action-bar droppedFields" style="min-height:80px;"></div>
 	  </div>
